Adjusting the media query css to ensure the leaderboard is centered on mobile devices

--- a/assets/css/syles.css
+++ b/assets/css/syles.css
@@ -138,4 +138,12 @@ li{
         align-items: center;
         gap: 5px;
     }
+
+    .view_area2{
+        width: 28vw;
+        height: auto;
+        margin: auto;
+        padding: 10px;
+        text-align: center;
+    }
 }
